2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j53-UNSTABLE

 *** CHANGE ***

 Template renaming, added gallery, album and photo header files in template dir.

 * General cleanup.

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j52-UNSTABLE

 *** CHANGE ***

 Remove of html_wrap/gallery.photo.default and html_wrap/photo.footer.default

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j51-UNSTABLE

 *** CHANGE ***

 Remove of html_wrap/gallery.album.default and html_wrap/album.footer.default

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j50-UNSTABLE

 *** CHANGE ***

 Remove of html_wrap/gallery.header.default and html_wrap/gallery.footer.default

2006-06-13 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j49-UNSTABLE

 * More use of gTranslate()

 * css -> 1.6
	includes/errors/unconfigured.php
	captionator.php
	copy_photo.php
	imagemap.php

 * removed unneeded extra_fields.php

 * General Cleanups and HTML fixes

2006-06-12 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j48-UNSTABLE

 CHANGE:
 * combined (removed + create new template file)
	layout/commentbox.inc
	layout/commentboxtop.inc
	layout/commentboxbottom.inc

 * css -> 1.6
	view_comments.php

 * Cleanups
	lib/Form.php
	layout/breadcrumb.inc
	css/screen.css.default
	templates/view_album.tpl.default
 
2006-06-11 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j47-UNSTABLE

 * Very little Wording in config_data.

 * Fix: Added littlered * to necessary fields.

 * Removed unneeded things in arrayToBarGraph()

 * CSS-> 1.6
	lib/voting.php
	lib/messages.php

2006-06-10 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j46-UNSTABLE

 * Fix: Typo in getTag introduce in 1.6-svn-b1-j37-UNSTABLE

2006-06-10 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j45-UNSTABLE

 * use of gSubmit etc. in move_photo.php

 * css->1.6
	lib/content.php
	
 * removed unneeded files
	poll_properties.php
	layout/navtableend.inc
	layout/navtablemiddle.inc
	layout/navtableend.inc

2006-06-09 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j44-UNSTABLE

 * Error nicify in class/Album.php
