@@ -1,29 +1,0 @@
-<?php
-// $Id$
-// This is the default photo footer (for the gallery slideshow
-// page: slideshow.php). It's companion is slideshow.header.default.
-//
-// To override this footer, create a file called slideshow.footer
-// in this directory.
-//
-?>
-<?php
-includeTemplate('slideshow.footer.tpl');
-
-require_once(dirname(dirname(__FILE__)) .'/templates/info_donation-block.tpl.default');
-
-global $GALLERY_EMBEDDED_INSIDE;
-if (! isset($GALLERY_EMBEDDED_INSIDE)) {
-    if (!empty($gallery->album)) {
-		echo gallery_validation_link(
-			"slideshow.php",
-			false,
-			array("set_albumName" => $gallery->album->fields['name'])
-		);
-    } else {
-		echo gallery_validation_link("slideshow.php", false);
-    }
-}
-
-includeHtmlWrap("wrapper.footer");
-?>
