@@ -1,29 +1,0 @@
-<?php
-// $Id$
-// This is the default stats footer
-// It's companion is stats.header.default.
-//
-// To override this footer, create a file called stats.footer
-// in this directory.
-//
-//
-// Some tips:
-// * Some application variables:
-//      - Gallery Title: $app->galleryTitle
-// * Gallery developers would appreciate you promoting the Gallery code
-//   a little. Use the following code snippet to display the current
-//   Gallery version linked to the Gallery home page.
-//
-?>  
-<?php
-includeTemplate('stats.footer.tpl');
-
-require_once(dirname(dirname(__FILE__)) .'/templates/info_donation-block.tpl.default');
-
-global $GALLERY_EMBEDDED_INSIDE;
-if (! isset($GALLERY_EMBEDDED_INSIDE)) {
-    echo gallery_validation_link('', true);
-}
-
-includeHtmlWrap("wrapper.footer");
-?>
