@@ -1,56 +1,0 @@
-<?php
-// $Id$
-// This is the default stats header (for the stats results page: stats.php).
-// It's companion is stats.footer.default.
-//
-// To override this header, create a file called stats.header
-// in this directory.
-//
-// NOTE: This header gets inserted below the <body> tag.
-//
-?>
-<?php
-	includeHtmlWrap("wrapper.header");
-	global $stats_title;
-	if (!includeTemplate("stats.header.tpl")) {
-	     if(!isset($newstyle)) {
-?>
-  <div class="g-header">
-    <div class="g-pagetitle"><?php echo $gallery->app->galleryTitle ?>:: <?php echo _("Gallery statistics") . $stats_title; ?></div>
-  </div>
-<?php
-    }
-    else {
-?>
-?>
-
-<table width="100%" border="0" cellpadding="0" cellspacing="0">
-  <tr>
-    <td>
-      <table cellpadding="0" cellspacing="0" width="100%" border="0" align="center" class="mod_headliner">
-        <tr valign="middle">
-          <td class="leftspacer">
-          <td>
-            <table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
-              <tr>
-                <td class="mod_toplight_left" align="right"></td>
-                <td class="head" align="left"><?php echo _("Gallery statistics") . $stats_title; ?></td>
-                <td class="mod_toplight_right" align="left"></td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-      <table width="100%" cellpadding="0" cellspacing="0">
-        <tr>
-          <td class="mod_under_hl"></td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-  <tr>
-    <td valign="top">
-<?php
-    }
-}
-?>
