@@ -1,0 +1,34 @@
+<?php
+/*
+ * Gallery - a web based photo album viewer and editor
+ * Copyright (C) 2000-2006 Bharat Mediratta
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ *
+ * $Id: albums.tpl.default 13820 2006-06-14 12:03:36Z jenst $
+ */
+?>
+<?php
+/*
+ * General overall header, do not remove it.
+ * Especially when you run Gallery embedded.
+*/
+includeTemplate("overall.header");
+
+global $title;
+?>
+    <div class="g-header">
+	<div class="g-pagetitle"><?php echo $title; ?></div>
+    </div>
