@@ -1,0 +1,51 @@
+<?php
+/*
+ * Gallery - a web based photo album viewer and editor
+ * Copyright (C) 2000-2006 Bharat Mediratta
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ *
+ * $Id: albums.tpl.default 13820 2006-06-14 12:03:36Z jenst $
+ */
+?>
+<?php
+/*
+ * General overall header, do not remove it.
+ * Especially when you run Gallery embedded.
+*/
+includeTemplate("overall.header");
+
+global $stats_title;
+?>
+<table cellpadding="0" cellspacing="0" width="100%" border="0" align="center" class="mod_headliner">
+    <tr valign="middle">
+	<td class="leftspacer">
+	<td>
+	<table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
+	    <tr>
+		<td class="mod_toplight_left right"></td>
+		<td class="head left"><?php echo _("Gallery statistics") . $stats_title; ?></td>
+		<td class="mod_toplight_right left"></td>
+	    </tr>
+	    </table>
+	</td>
+    </tr>
+</table>
+
+<table width="100%" cellpadding="0" cellspacing="0">
+    <tr>
+	<td class="mod_under_hl"></td>
+    </tr>
+</table>
