@@ -1,3 +1,9 @@
+2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j54-UNSTABLE
+
+*** CHANGE ***
+
+ Template renaming, added stats and slideshow header files in template dir.
+
 2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j53-UNSTABLE
 
  *** CHANGE ***
